@@ -14,3 +14,5 @@ tests/testsuite
 ,*
 testsuite.log
 libltdl/*
+.version
+.tarball-version
